# rbpico-scripts

./: README.md  newproject.sh
project-template/: CMakeLists.txt  create.sh  main.c  moveuf2toD.bat  transfer.sh
